@@ -17,34 +17,31 @@
 package org.gradle.api
 
 import org.gradle.integtests.fixtures.AbstractIntegrationSpec
-import org.gradle.integtests.fixtures.executer.UnexpectedBuildFailure
+import org.gradle.test.precondition.Requires
+import org.gradle.test.preconditions.IntegTestPreconditions
 import org.gradle.testfixtures.ProjectBuilder
 import org.gradle.util.GradleVersion
-import org.gradle.util.TextUtil
-import org.gradle.util.UsesNativeServices
-import spock.lang.FailsWith
-import spock.lang.Ignore
 import spock.lang.Issue
 
-// TODO: This needs a better home - Possibly in the test kit package in the future
+import static org.gradle.util.internal.TextUtil.normaliseFileSeparators
 
-@UsesNativeServices
+// TODO: This needs a better home - Possibly in the test kit package in the future
+// The gradleApi() dependency has missing JARs unless the test is run with the full Gradle distribution
+@Requires([IntegTestPreconditions.NotEmbeddedExecutor])
 class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
+
     def testProjectPath
-    def gradleUserHome
 
     def setup() {
-        testProjectPath = TextUtil.normaliseFileSeparators(file("test-project-dir").absolutePath)
-        gradleUserHome = TextUtil.normaliseFileSeparators(buildContext.gradleUserHomeDir.absolutePath)
+        testProjectPath = normalisedPathOf(file("test-project-dir"))
     }
 
     @Issue("GRADLE-2358")
-    @FailsWith(UnexpectedBuildFailure) // Test is currently failing
     def "can reference plugin by id in unit test"() {
 
         given:
         file("src/main/groovy/org/acme/TestPlugin.groovy") << """
-            package com.acme
+            package org.acme
             import org.gradle.api.*
 
             class TestPlugin implements Plugin<Project> {
@@ -60,7 +57,7 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
             import spock.lang.Specification
             import ${ProjectBuilder.name}
             import ${Project.name}
-            import com.acme.TestPlugin
+            import org.acme.TestPlugin
 
             class TestPluginSpec extends Specification {
                 def "can apply plugin by id"() {
@@ -77,6 +74,7 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
 
         and:
         buildFile << spockBasedBuildScript()
+        buildFile << addOpens()
 
         expect:
         succeeds("test")
@@ -84,8 +82,6 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
 
     @Issue("GRADLE-3068")
     def "can use gradleApi in test"() {
-        requireGradleDistribution()
-
         given:
         file("src/test/groovy/org/acme/ProjectBuilderTest.groovy") << """
             package org.acme
@@ -110,16 +106,14 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
 
         and:
         buildFile << junitBasedBuildScript()
-        buildFile << nativeDirBuildScriptConfiguration()
+        buildFile << addOpens()
 
         expect:
-        executer.withArgument("--info")
         succeeds("test")
     }
 
-    @Ignore("Must fix for 4.0")
     def "generated Gradle API JAR in custom Gradle user home is reused across multiple invocations"() {
-        requireGradleDistribution()
+        requireOwnGradleUserHomeDir()
 
         given:
         file("src/test/groovy/org/acme/ProjectBuilderTest.groovy") << """
@@ -154,7 +148,7 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
                 static Project createProject(File gradleUserHome) {
                     def project = ProjectBuilder.builder().withGradleUserHomeDir(gradleUserHome).build()
                     project.plugins.apply('java')
-                    project.dependencies.add('compile', project.dependencies.gradleApi())
+                    project.dependencies.add('implementation', project.dependencies.gradleApi())
                     project
                 }
             }
@@ -162,7 +156,7 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
 
         and:
         buildFile << spockBasedBuildScript()
-        buildFile << nativeDirBuildScriptConfiguration()
+        buildFile << addOpens()
 
         expect:
         succeeds('test')
@@ -173,7 +167,7 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
             ${basicBuildScript()}
 
             dependencies {
-                testCompile 'junit:junit:4.12'
+                testImplementation  'junit:junit:4.13'
             }
         """
     }
@@ -182,11 +176,40 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
         """
             ${basicBuildScript()}
 
-            dependencies {
-                testCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
-                    exclude module: 'groovy-all'
+            configurations.all { exclude group: 'org.codehaus.groovy' }
+
+            testing {
+                suites {
+                    test {
+                        useSpock()
+                    }
                 }
             }
+        """
+    }
+
+    /**
+     * Configures tests to include open access to java.base/java.lang modules
+     * ProjectBuilder usages will fail without this
+     */
+    static String addOpens() {
+        """
+        // Needed when using ProjectBuilder
+        class AddOpensArgProvider implements CommandLineArgumentProvider {
+            private final Test test;
+            public AddOpensArgProvider(Test test) {
+                this.test = test;
+            }
+            @Override
+            Iterable<String> asArguments() {
+                return test.javaVersion.isCompatibleWith(JavaVersion.VERSION_1_9)
+                    ? ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+                    : []
+            }
+        }
+        tasks.withType(Test).configureEach {
+            jvmArgumentProviders.add(new AddOpensArgProvider(it))
+        }
         """
     }
 
@@ -194,26 +217,21 @@ class ApplyPluginIntegSpec extends AbstractIntegrationSpec {
         """
             apply plugin: 'groovy'
 
-            repositories {
-                mavenCentral()
-            }
+            ${mavenCentralRepository()}
 
             dependencies {
-                compile gradleApi()
-                compile localGroovy()
+                implementation gradleApi()
+                implementation localGroovy()
             }
         """
     }
 
-    static String nativeDirBuildScriptConfiguration() {
-        """
-            compileTestGroovy {
-                options.forkOptions.jvmArgs << '-Dorg.gradle.native.dir=' + System.getProperty('org.gradle.native.dir')
-            }
-
-            test {
-                systemProperties = ['org.gradle.native.dir' : System.getProperty('org.gradle.native.dir')]
-            }
-        """
+    private String getGradleUserHome() {
+        normalisedPathOf(executer.gradleUserHomeDir)
     }
+
+    static String normalisedPathOf(File file) {
+        normaliseFileSeparators(file.absolutePath)
+    }
+
 }
